--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -35,8 +35,9 @@
                 android:contentDescription="@null"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:visibility="invisible"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0"/>
+                app:layout_collapseParallaxMultiplier="0.5"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
