--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="lighter_gray">#BDBDBD</color>
     <color name="darker_gray">#757575</color>
+    <color name="light_transparent_text_background">#AA000000</color>
 
     <color name="transparent_progress_dialog">#80000000</color>
 
