--- a/app/src/main/res/layout/dialog_borderless.xml
+++ b/app/src/main/res/layout/dialog_borderless.xml
@@ -5,10 +5,14 @@
                 android:background="@android:color/transparent"
                 android:gravity="center">
 
-    <com.sreeraj.popularmovies.SpinnerLoading
-        android:id="@+id/spinner_loading"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progressbar_custom"/>
 
 </RelativeLayout>
