--- a/app/src/main/res/drawable/progressbar_custom.xml
+++ b/app/src/main/res/drawable/progressbar_custom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="500"
         android:fromDegrees="0"
         android:pivotX="50%"
         android:pivotY="50%"
         android:toDegrees="360">
 
     <shape
-        android:innerRadius="25dp"
+        android:innerRadius="15dp"
         android:shape="ring"
         android:thickness="5dp"
         android:useLevel="false">
