--- a/app/src/main/res/layout/dialog_borderless.xml
+++ b/app/src/main/res/layout/dialog_borderless.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleLarge"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
