--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -60,117 +60,76 @@
             android:orientation="vertical"
             android:padding="@dimen/padding_medium">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <include layout="@layout/movie_basic_details_layout"/>
 
-                <ImageView
-                    android:id="@+id/thumb_image"
-                    android:layout_width="100dp"
-                    android:layout_height="150dp"
-                    android:contentDescription="@null"
-                    android:scaleType="fitXY"
-                    android:transitionName="thumb_image"/>
-
-                <TextView
-                    android:id="@+id/user_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/thumb_image"
-                    android:drawableLeft="@drawable/ic_star"
-                    android:drawablePadding="@dimen/padding_small"
-                    android:gravity="center"/>
-
-                <TextView
-                    android:id="@+id/vote_count"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/user_rating"
-                    android:layout_marginLeft="@dimen/margin_medium"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/thumb_image"
-                    android:drawableLeft="@drawable/ic_people"
-                    android:drawablePadding="@dimen/padding_small"/>
-
-                <TextView
-                    android:id="@+id/release_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/vote_count"
-                    android:layout_marginLeft="@dimen/margin_medium"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/thumb_image"
-                    android:text="@string/release_date"/>
-
-                <TextView
-                    android:id="@+id/release_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/vote_count"
-                    android:layout_marginLeft="@dimen/margin_xs"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/release_label"/>
-
-                <TextView
-                    android:id="@+id/genre_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/release_date"
-                    android:layout_marginLeft="@dimen/margin_medium"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/thumb_image"
-                    android:text="@string/genre"
-                    android:visibility="gone"/>
-
-                <TextView
-                    android:id="@+id/genre"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/release_date"
-                    android:layout_marginLeft="@dimen/margin_xs"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_toRightOf="@+id/genre_label"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
+            <android.support.v7.widget.CardView
                 android:id="@+id/tagline_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:visibility="gone">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacing"
-                    android:background="@color/darker_gray"/>
-
-                <TextView
-                    android:id="@+id/tagline"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/margin_xs"
-                    android:paddingRight="@dimen/margin_xs"
-                    android:textSize="@dimen/text_large"
-                    android:textStyle="italic"/>
+                    android:orientation="vertical"
+                    android:padding="@dimen/padding_small">
 
-            </RelativeLayout>
+                    <TextView
+                        style="@style/PopularMovies.Label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/tagline"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/spacing"
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:background="@color/darker_gray"/>
+
+                    <TextView
+                        android:id="@+id/tagline"
+                        style="@style/PopularMovies.Text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_xs"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/overview_card"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_medium"
-                android:background="@color/darker_gray"/>
+                android:visibility="gone">
 
-            <TextView
-                android:id="@+id/synopsis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:textSize="@dimen/text_medium"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/padding_small">
+
+                    <TextView
+                        style="@style/PopularMovies.Label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/overview"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:background="@color/darker_gray"/>
+
+                    <TextView
+                        android:id="@+id/synopsis"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:textSize="@dimen/text_medium"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
