--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <integer name="number_of_columns">4</integer>
+    <integer name="size_of_progress_pagination">4</integer>
 </resources>
