--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -60,13 +60,16 @@
             android:orientation="vertical"
             android:padding="@dimen/padding_medium">
 
-            <include layout="@layout/movie_basic_details_layout"/>
+            <include
+                layout="@layout/movie_basic_details_layout"
+                android:layout_weight="1"/>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/tagline_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginTop="@dimen/margin_medium"
+                android:layout_weight="1"
                 android:visibility="gone">
 
                 <LinearLayout
@@ -102,6 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_medium"
+                android:layout_weight="1"
                 android:visibility="gone">
 
                 <LinearLayout
@@ -132,37 +136,48 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/overview_card"
+                android:id="@+id/images_card"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:visibility="gone">
 
-                <android.support.v4.view.ViewPager
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="@dimen/padding_small">
 
-                    <TextView
-                        style="@style/PopularMovies.Label"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/overview"/>
+                        android:orientation="horizontal">
+
+                        <TextView
+                            style="@style/PopularMovies.Label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/images"/>
+
+                        <TextView
+                            android:id="@+id/number_of_images"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right"/>
+                    </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/spacing"
+                        android:layout_marginBottom="@dimen/margin_xs"
                         android:layout_marginTop="@dimen/margin_xs"
                         android:background="@color/darker_gray"/>
 
-                    <TextView
-                        android:id="@+id/synopsis"
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/images_viewpager"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_xs"
-                        android:textSize="@dimen/text_medium"/>
-                </android.support.v4.view.ViewPager>
+                        android:layout_height="100dp"/>
+                </LinearLayout>
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
