--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -1,6 +1,8 @@
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-           xmlns:tools="http://schemas.android.com/tools"
-           android:layout_width="match_parent"
-           android:layout_height="280dp"
-           android:scaleType="centerCrop"
-           tools:context="com.sreeraj.popularmovies.fragments.ImagesFragment"/>
+<ImageView
+    android:id="@+id/image"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:contentDescription="@null"
+    tools:context="com.sreeraj.popularmovies.fragments.ImagesFragment"/>
