--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -65,6 +65,41 @@
                 android:layout_weight="1"/>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/overview_card"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_weight="1"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/padding_small">
+
+                    <TextView
+                        style="@style/PopularMovies.Label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/overview"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:background="@color/darker_gray"/>
+
+                    <TextView
+                        android:id="@+id/synopsis"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:textSize="@dimen/text_medium"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:id="@+id/tagline_layout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -101,41 +136,6 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/overview_card"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_weight="1"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/padding_small">
-
-                    <TextView
-                        style="@style/PopularMovies.Label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/overview"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/spacing"
-                        android:layout_marginTop="@dimen/margin_xs"
-                        android:background="@color/darker_gray"/>
-
-                    <TextView
-                        android:id="@+id/synopsis"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_xs"
-                        android:textSize="@dimen/text_medium"/>
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
                 android:id="@+id/images_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,23 +148,24 @@
                     android:orientation="vertical"
                     android:padding="@dimen/padding_small">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             style="@style/PopularMovies.Label"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_toLeftOf="@+id/number_of_images"
                             android:text="@string/images"/>
 
                         <TextView
                             android:id="@+id/number_of_images"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"/>
-                    </LinearLayout>
+                            android:layout_alignParentRight="true"/>
+                    </RelativeLayout>
 
                     <View
                         android:layout_width="match_parent"
@@ -175,6 +176,52 @@
 
                     <android.support.v4.view.ViewPager
                         android:id="@+id/images_viewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/videos_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="@dimen/padding_small">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            style="@style/PopularMovies.Label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_toLeftOf="@+id/number_of_videos"
+                            android:text="@string/trailers"/>
+
+                        <TextView
+                            android:id="@+id/number_of_videos"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"/>
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacing"
+                        android:layout_marginBottom="@dimen/margin_xs"
+                        android:layout_marginTop="@dimen/margin_xs"
+                        android:background="@color/darker_gray"/>
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/videos_viewpager"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"/>
                 </LinearLayout>
