--- a/app/src/main/res/layout/movie_grid_cell.xml
+++ b/app/src/main/res/layout/movie_grid_cell.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:gravity="center"
                 android:orientation="vertical">
 
-    <ImageView
+    <com.sreeraj.popularmovies.views.PMImageView
         android:id="@+id/movie_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_centerVertical="true"
-        android:contentDescription="@null"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:transitionName="thumb_image"/>
+        app:imageAspectRatio="@dimen/movie_item_image_aspect_ratio"
+        tools:layout_width="300dp"
+        tools:src="@drawable/placeholder_movie_item_image"/>
+    <!--<ImageView-->
+    <!--android:id="@+id/movie_image"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="200dp"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:contentDescription="@null"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:transitionName="thumb_image"/>-->
 
     <TextView
         android:id="@+id/movie_title"
