--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".activities.PMMainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -26,7 +27,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            app:layout_scrollFlags="scroll|snap"
             app:tabBackground="@android:color/white"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/colorPrimary"
