--- a/app/src/main/res/layout/movie_basic_details_layout.xml
+++ b/app/src/main/res/layout/movie_basic_details_layout.xml
@@ -2,7 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:context="com.sreeraj.popularmovies.Main2Activity"
+                tools:context="com.sreeraj.popularmovies.activities.PMMovieDetailsActivity"
                 tools:showIn="@layout/activity_movie_details">
 
     <ImageView
