--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#C62828</color>
     <color name="colorPrimaryDark">#B71C1C</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#C62828</color>
 
     <color name="lighter_gray">#BDBDBD</color>
     <color name="darker_gray">#757575</color>
