--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="spacing">1dp</dimen>
 
     <!--Text-->
+    <dimen name="text_small">14sp</dimen>
     <dimen name="text_medium">15sp</dimen>
     <dimen name="text_heading">16sp</dimen>
     <dimen name="text_large">17sp</dimen>
