--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <!--Margins-->
     <dimen name="margin_xs">8dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_large">32dp</dimen>
 
     <!--Height-->
     <dimen name="height_xs">4dp</dimen>
